add the categories

--- a/backend/views/index.html
+++ b/backend/views/index.html
@@ -7,6 +7,6 @@
      <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    <h1>Welcome to TechNotes</h1>
+    <h1>Welcome to TalentHub</h1>
 </body>
 </html>
